seaqt/QtWidgets/gen_qgraphicseffect.h

typedef struct QBrush QBrush;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QGraphicsBlurEffect QGraphicsBlurEffect;
typedef struct QGraphicsColorizeEffect QGraphicsColorizeEffect;
typedef struct QGraphicsDropShadowEffect QGraphicsDropShadowEffect;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QGraphicsOpacityEffect QGraphicsOpacityEffect;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QTimerEvent QTimerEvent;
void QGraphicsEffect_connect_enabledChanged(QGraphicsEffect* self, intptr_t slot, void (*callback)(intptr_t, bool), void (*release)(intptr_t));
void QGraphicsColorizeEffect_connect_colorChanged(QGraphicsColorizeEffect* self, intptr_t slot, void (*callback)(intptr_t, QColor*), void (*release)(intptr_t));
void QGraphicsColorizeEffect_connect_strengthChanged(QGraphicsColorizeEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsBlurEffect_connect_blurRadiusChanged(QGraphicsBlurEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsBlurEffect_connect_blurHintsChanged(QGraphicsBlurEffect* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
struct QGraphicsDropShadowEffect_VTable {
	void (*destructor)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self);
	QMetaObject* (*metaObject)(struct QGraphicsDropShadowEffect_VTable* vtbl, const QGraphicsDropShadowEffect* self);
	void* (*metacast)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, const char* param1);
	int (*metacall)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, int param1, int param2, void** param3);
	QRectF* (*boundingRectFor)(struct QGraphicsDropShadowEffect_VTable* vtbl, const QGraphicsDropShadowEffect* self, QRectF* rect);
	void (*draw)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, QPainter* painter);
	void (*sourceChanged)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, int flags);
	bool (*event)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, QEvent* event);
	bool (*eventFilter)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, QObject* watched, QEvent* event);
	void (*timerEvent)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, QTimerEvent* event);
	void (*childEvent)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, QChildEvent* event);
	void (*customEvent)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, QEvent* event);
	void (*connectNotify)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, QMetaMethod* signal);
	void (*disconnectNotify)(struct QGraphicsDropShadowEffect_VTable* vtbl, QGraphicsDropShadowEffect* self, QMetaMethod* signal);
};
QGraphicsDropShadowEffect* QGraphicsDropShadowEffect_new(struct QGraphicsDropShadowEffect_VTable* vtbl);
QGraphicsDropShadowEffect* QGraphicsDropShadowEffect_new2(struct QGraphicsDropShadowEffect_VTable* vtbl, QObject* parent);
QColor* QGraphicsDropShadowEffect_color(const QGraphicsDropShadowEffect* self);
void QGraphicsDropShadowEffect_setOffset(QGraphicsDropShadowEffect* self, QPointF* ofs);
void QGraphicsDropShadowEffect_setOffset2(QGraphicsDropShadowEffect* self, double dx, double dy);
void QGraphicsDropShadowEffect_setOffsetWithQreal(QGraphicsDropShadowEffect* self, double d);
void QGraphicsDropShadowEffect_setXOffset(QGraphicsDropShadowEffect* self, double dx);
void QGraphicsDropShadowEffect_setYOffset(QGraphicsDropShadowEffect* self, double dy);
void QGraphicsDropShadowEffect_setBlurRadius(QGraphicsDropShadowEffect* self, double blurRadius);
void QGraphicsDropShadowEffect_setColor(QGraphicsDropShadowEffect* self, QColor* color);
void QGraphicsDropShadowEffect_offsetChanged(QGraphicsDropShadowEffect* self, QPointF* offset);
void QGraphicsDropShadowEffect_connect_offsetChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, QPointF*), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_blurRadiusChanged(QGraphicsDropShadowEffect* self, double blurRadius);
void QGraphicsDropShadowEffect_connect_blurRadiusChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_colorChanged(QGraphicsDropShadowEffect* self, QColor* color);
void QGraphicsDropShadowEffect_connect_colorChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, QColor*), void (*release)(intptr_t));
struct miqt_string QGraphicsDropShadowEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsDropShadowEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsDropShadowEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsDropShadowEffect_trUtf83(const char* s, const char* c, int n);
QMetaObject* QGraphicsDropShadowEffect_virtualbase_metaObject(const void* self);
void* QGraphicsDropShadowEffect_virtualbase_metacast(void* self, const char* param1);
int QGraphicsDropShadowEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
QRectF* QGraphicsDropShadowEffect_virtualbase_boundingRectFor(const void* self, QRectF* rect);
void QGraphicsDropShadowEffect_virtualbase_draw(void* self, QPainter* painter);
void QGraphicsDropShadowEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsDropShadowEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsDropShadowEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
void QGraphicsDropShadowEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
void QGraphicsDropShadowEffect_virtualbase_childEvent(void* self, QChildEvent* event);
void QGraphicsDropShadowEffect_virtualbase_customEvent(void* self, QEvent* event);
void QGraphicsDropShadowEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QGraphicsDropShadowEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QGraphicsDropShadowEffect_protectedbase_updateBoundingRect(void* self);
bool QGraphicsDropShadowEffect_protectedbase_sourceIsPixmap(const void* self);
QRectF* QGraphicsDropShadowEffect_protectedbase_sourceBoundingRect(const void* self);
void QGraphicsDropShadowEffect_protectedbase_drawSource(void* self, QPainter* painter);
QPixmap* QGraphicsDropShadowEffect_protectedbase_sourcePixmap(const void* self);
QObject* QGraphicsDropShadowEffect_protectedbase_sender(const void* self);
int QGraphicsDropShadowEffect_protectedbase_senderSignalIndex(const void* self);
int QGraphicsDropShadowEffect_protectedbase_receivers(const void* self, const char* signal);
bool QGraphicsDropShadowEffect_protectedbase_isSignalConnected(const void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsDropShadowEffect_staticMetaObject();
void QGraphicsDropShadowEffect_delete(QGraphicsDropShadowEffect* self);
QMetaObject* QGraphicsOpacityEffect_metaObject(const QGraphicsOpacityEffect* self);
void* QGraphicsOpacityEffect_metacast(QGraphicsOpacityEffect* self, const char* param1);
int QGraphicsOpacityEffect_metacall(QGraphicsOpacityEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsOpacityEffect_tr(const char* s);
struct miqt_string QGraphicsOpacityEffect_trUtf8(const char* s);
double QGraphicsOpacityEffect_opacity(const QGraphicsOpacityEffect* self);
QBrush* QGraphicsOpacityEffect_opacityMask(const QGraphicsOpacityEffect* self);
void QGraphicsOpacityEffect_setOpacity(QGraphicsOpacityEffect* self, double opacity);
void QGraphicsOpacityEffect_setOpacityMask(QGraphicsOpacityEffect* self, QBrush* mask);
void QGraphicsOpacityEffect_opacityChanged(QGraphicsOpacityEffect* self, double opacity);
void QGraphicsOpacityEffect_connect_opacityChanged(QGraphicsOpacityEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsOpacityEffect_opacityMaskChanged(QGraphicsOpacityEffect* self, QBrush* mask);
void QGraphicsOpacityEffect_connect_opacityMaskChanged(QGraphicsOpacityEffect* self, intptr_t slot, void (*callback)(intptr_t, QBrush*), void (*release)(intptr_t));
struct miqt_string QGraphicsOpacityEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsOpacityEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsOpacityEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsOpacityEffect_trUtf83(const char* s, const char* c, int n);